--- a/test/fiches_de_paie/ingenieur_etude_2014-07.yaml
+++ b/test/fiches_de_paie/ingenieur_etude_2014-07.yaml
@@ -74,7 +74,7 @@ output_variables:
   versement_transport: 0
 
   allegement_fillon: 0
-  alleg_cice: 0
+  # alleg_cice: 0
   forfait_social: -4.72
   tehr: 0
   salbrut: 3000
