Rename salbrut to salaire_de_base and re-enable most tests.

--- a/test/fiches_de_paie/coordinatrice_2014-03.yaml
+++ b/test/fiches_de_paie/coordinatrice_2014-03.yaml
@@ -73,7 +73,7 @@ output_variables:
   # allegement_fillon: 222.12, TODO: (devrait être 0)
   credit_impot_competitivite_emploi: 0
   tehr: 0
-  salbrut: 1800
+  salaire_de_base: 1800
 
   # cotisations_salariales: 0
 
