--- a/test/fiches_de_paie/assistant_emission_2014-01.yaml
+++ b/test/fiches_de_paie/assistant_emission_2014-01.yaml
@@ -73,7 +73,7 @@ output_variables:
   allegement_fillon: 0
   credit_impot_competitivite_emploi: 0
   tehr: 0
-  salbrut: 0
+  salaire_de_base: 0
 
   # cotisations_salariales: 0
 
