--- a/test/fiches_de_paie/ingenieur_etude_2014-07.yaml
+++ b/test/fiches_de_paie/ingenieur_etude_2014-07.yaml
@@ -77,7 +77,7 @@ output_variables:
   # alleg_cice: 0
   forfait_social: -4.72
   tehr: 0
-  salbrut: 3000
+  salaire_de_base: 3000
 
   # cotisations_salariales: 0
 
