--- a/test/fiches_de_paie/ingenieur_ssii_2013-08.yaml
+++ b/test/fiches_de_paie/ingenieur_ssii_2013-08.yaml
@@ -76,7 +76,7 @@ output_variables:
   allegement_fillon: 0
   credit_impot_competitivite_emploi: 2512.88 * 0.04 # pas indiqué dans la fiche
   tehr: 0
-  salbrut: 2512.88
+  salaire_de_base: 2512.88
   assiette_cotisations_sociales: 2512.88
 
   # cotisations_salariales: 0
