--- a/test/fiches_de_paie/thesard_2011-07.yaml
+++ b/test/fiches_de_paie/thesard_2011-07.yaml
@@ -72,7 +72,7 @@ output_variables:
   allegement_fillon: 0
   credit_impot_competitivite_emploi: 0
   tehr: 0
-  salbrut: 1900
+  salaire_de_base: 1900
 
   # cotisations_salariales: 0
 
