--- a/test/fiches_de_paie/TEMPLATE.yaml
+++ b/test/fiches_de_paie/TEMPLATE.yaml
@@ -1,33 +1,38 @@
-name: "Thésard"
-period: "2011-07"
-ignore: true
+name: "TEMPLATE"  # TODO: Mettre ici un nom explicite de la fiche de paie tout en préservant l'anonymat de la personne.
+period: "2014-01"  # TODO: Mettre ici le mois de la fiche de paie.
+ignore: true  # TODO: Enlever cette ligne pour tester la fiche de paie.
 input_variables:
   allegement_fillon_mode_recouvrement: 1  # "anticipe_regularisation_fin_de_periode"
   assujettie_taxe_salaires: False
   avantages_en_nature_valeur_reelle: 0
-  contrat_de_travail: 1  # temps plein
-  contrat_de_travail_arrivee: "2011-01-01"
-  contrat_de_travail_depart: "2011-12-31"
-  contrat_de_travail_duree: 1  # CDI
-  effectif_entreprise: 10000
-  # exposition_accident: 3
+  contrat_de_travail: 0  # temps plein
+  contrat_de_travail_arrivee: "2014-01-01"
+  contrat_de_travail_depart: "2014-12-31"
+  contrat_de_travail_duree: 0  # CDI
+  effectif_entreprise: 0
   heures_non_remunerees_volume: 0
-  indemnite_residence: 0  # WARNING
-  code_postal_entreprise: "21000"
+  heures_remunerees_volume: 0
+  hsup: 0
+  # exposition_accident: 3
+  indemnites_forfaitaires: 0
+  indemnites_journalieres_maladie: 0
+  indemnites_compensatrices_conges_payes: 0
+  code_postal_entreprise: "75014"
   nombre_tickets_restaurant: 0
   prevoyance_obligatoire_cadre_taux_employeur: .015  # 1.5% est le minimum
+  primes_salaires: 0
   prise_en_charge_employeur_retraite_complementaire: 0
   prise_en_charge_employeur_prevoyance_complementaire: 0
   prise_en_charge_employeur_retraite_supplementaire: 0
   ratio_alternants: 0
   redevable_taxe_apprentissage: 0
   remboursement_transport_base: 0
-  salaire_de_base: 1900
+  salaire_de_base: 0
   taux_accident_travail: 0
   taux_versement_transport: 0
   titre_restaurant_valeur_unitaire: 0
   titre_restaurant_volume: 0
-  type_sal: 6  # non cadre
+  type_sal: 0  # non cadre
   volume_jours_ijss: 0
 output_variables:
   # TODO à inclure dans la décomposition et à finir de coder forfait_social: -3.8 # 47.49 de base
@@ -35,34 +40,37 @@ output_variables:
 
   # salsuperbrut: 0
   # cotisations_patronales: 0
+  remboursement_transport: 0
 
   # cotisations_patronales_contributives: 0
   ags: 0
   agff_tranche_a_employeur: 0
+  agirc_gmp_employeur: 0
+  agirc_tranche_b_employeur: 0
   apec_employeur: 0
   arrco_tranche_a_employeur: 0
-  assedic_employeur: -104.46
+  assedic_employeur: 0
   cotisation_exceptionnelle_temporaire_employeur: 0
-  vieillesse_deplafonnee_employeur: -30.4
-  vieillesse_plafonnee_employeur: -157.70
+  vieillesse_deplafonnee_employeur: 0
+  vieillesse_plafonnee_employeur: 0
   fonds_emploi_hospitalier: 0
-  ircantec_employeur: -64.79
+  ircantec_employeur: 0
   pension_civile_employeur: 0
   rafp_employeur: 0
 
   # cotisations_patronales_non_contributives: 0
   allocations_temporaires_invalidite: 0
   accident_du_travail: 0
-  famille: -102.6
-  # maladie_employeur: 0 problème d'assiette
+  famille: 0
+  maladie_employeur: 0
   taxe_salaires: 0
 
   # cotisations_patronales_main_d_oeuvre: 0
   conge_individuel_formation_cdd: 0
   contribution_developpement_apprentissage: 0
-  contribution_solidarite_autonomie: -5.7
+  contribution_solidarite_autonomie: 0
   contribution_supplementaire_apprentissage: 0
-  fnal: -1.9 - 7.6
+  fnal: 0
   formation_professionnelle: 0
   participation_effort_construction: 0
   prevoyance_obligatoire_cadre: 0
@@ -71,37 +79,38 @@ output_variables:
 
   allegement_fillon: 0
   credit_impot_competitivite_emploi: 0
-  tehr: {'2011': 0}
-  salaire_de_base: 1900
+  forfait_social: 0
+  tehr: {'2014': 0}
+  assiette_cotisations_sociales: 0
 
   # cotisations_salariales: 0
 
   # cotisations_salariales_contributives: 0
   agff_tranche_a_employe: 0
+  agirc_gmp_employe: 0
   agirc_tranche_b_employe: 0
   apec_employe: 0
   arrco_tranche_a_employe: 0
-  # assedic_employe: -17.14 ERROR: devrait être 0
+  assedic_employe: 0
   cotisation_exceptionnelle_temporaire_employe: 0
-  vieillesse_deplafonnee_employe: -1.91
+  vieillesse_deplafonnee_employe: 0
   vieillesse_plafonnee_employe: 0
-  # ircantec_employe: -43.32 TODO: corriger
+  ircantec_employe: 0
   pension_civile_employe: 0
   rafp_employe: 0
 
   # cotisations_salariales_non_contributives: 0
-  # maladie_employe: -14.25 devrait être -14.39
-  # contribution_exceptionnelle_solidarite_employe: 0
-  csgsald: -93.99
+  maladie_employe: 0
+  contribution_exceptionnelle_solidarite_employe: 0
+  csgsald: 0
   mhsup: 0
-  salnet: 1549.61
+  salnet: 0
 
   # salaire imposable
-  csgsali: -44.23
-  crdssal: -9.21
+  csgsali: 0
+  crdssal: 0
   hsup: 0
-  # sal: 0
-
+  sal: 0  # salaire imposable
   depense_cantine_titre_restaurant_employe: 0
 
-  salaire_net_a_payer: 1549.61
+  salaire_net_a_payer: 0
