--- a/test/fiches_de_paie/assistant_emission_2014-01.yaml
+++ b/test/fiches_de_paie/assistant_emission_2014-01.yaml
@@ -11,7 +11,7 @@ input_variables:
   effectif_entreprise: 0
   # exposition_accident: 3
   heures_non_remunerees_volume: 0
-  localisation_entreprise: "75014"
+  code_postal_entreprise: "75014"
   nombre_tickets_restaurant: 0
   prevoyance_obligatoire_cadre_taux_employeur: 0
   prevoyance_obligatoire_cadre_taux_employe: .015  # 1.5% est le minimum en 2014 et le défaut
@@ -30,7 +30,7 @@ input_variables:
   heures_remunerees_volume: 0
   volume_jours_ijss: 0
 output_variables:
-  # TODO à inclure dans la décomposition et à finir de coder forfait_social: -3.8  # 47.49 de base
+  # TODO à inclure dans la décomposition et à finir de coder forfait_social: -3.8 # 47.49 de base
   # TODO à coder taxe_handicapes: 18.40
 
   # salsuperbrut: 0
@@ -62,8 +62,7 @@ output_variables:
   contribution_developpement_apprentissage: 0
   contribution_solidarite_autonomie: 0
   contribution_supplementaire_apprentissage: 0
-  fnal_tranche_a: 0
-  fnal_tranche_a_plus_20: 0
+  fnal: 0
   formation_professionnelle: 0
   participation_effort_construction: 0
   prevoyance_obligatoire_cadre: 0
@@ -72,8 +71,7 @@ output_variables:
 
   allegement_fillon: 0
   credit_impot_competitivite_emploi: 0
-  tehr: 0
-  salaire_de_base: 0
+  tehr: {'2014': 0}
 
   # cotisations_salariales: 0
 
