--- a/test/fiches_de_paie/coordinatrice_2014-03.yaml
+++ b/test/fiches_de_paie/coordinatrice_2014-03.yaml
@@ -12,14 +12,14 @@ input_variables:
   heures_non_remunerees_volume: 0
   # heures_remunerees_volume: 0
   # exposition_accident: 3
-  localisation_entreprise: "13299"
+  code_postal_entreprise: "13299"
   nombre_tickets_restaurant: 0
   prevoyance_obligatoire_cadre_taux_employeur: .015  # 1.5% est le minimum
   primes_salaires: 0
   prise_en_charge_employeur_retraite_complementaire: 82.44
   prise_en_charge_employeur_prevoyance_complementaire: 0
   prise_en_charge_employeur_retraite_supplementaire: 0
-  # ratio_alternants: 0, pas l'info
+  # ratio_alternants: 0 pas l'info
   redevable_taxe_apprentissage: 1
   remboursement_transport_base: 0
   salaire_de_base: 1800
@@ -30,7 +30,7 @@ input_variables:
   type_sal: 0  # non cadre
   volume_jours_ijss: 0
 output_variables:
-  # TODO à inclure dans la décomposition et à finir de coder forfait_social: -3.8, # 47.49 de base
+  # TODO à inclure dans la décomposition et à finir de coder forfait_social: -3.8 # 47.49 de base
   # TODO à coder taxe_handicapes: 18.40
 
   # salsuperbrut: 0
@@ -59,20 +59,19 @@ output_variables:
 
   # cotisations_patronales_main_d_oeuvre: 0
   conge_individuel_formation_cdd: 0
-  contribution_developpement_apprentissage: -3.24  # avec la taxe d'apprentissage
+  contribution_developpement_apprentissage: -3.24 #avec la taxe d'apprentissage
   contribution_solidarite_autonomie: -5.4
-  # contribution_supplementaire_apprentissage: 0, pas dans la fiche
-  fnal_tranche_a: 0
-  # fnal_tranche_a_plus_20: 0, pas dans la fiche de paie
+  # contribution_supplementaire_apprentissage: 0 pas dans la fiche
+  # fnal: 0  TODO: check
   formation_professionnelle: -28.8
   participation_effort_construction: -8.1
   prevoyance_obligatoire_cadre: 0
   taxe_apprentissage: -9
   versement_transport: 0
 
-  # allegement_fillon: 222.12, TODO: (devrait être 0)
+  # allegement_fillon: 222.12 TODO: (devrait être 0)
   credit_impot_competitivite_emploi: 0
-  tehr: 0
+  tehr: {'2014': 0}
   salaire_de_base: 1800
 
   # cotisations_salariales: 0
@@ -91,7 +90,7 @@ output_variables:
   rafp_employe: 0
 
   # cotisations_salariales_non_contributives: 0
-  maladie_employe: -13.5  # regroupée avec vieillesse dans la fiche de paie
+  maladie_employe: -13.5 # regroupée avec vieillesse dans la fiche de paie
   contribution_exceptionnelle_solidarite_employe: 0
   csgsald: -90.19
   mhsup: 0
@@ -99,9 +98,9 @@ output_variables:
 
   # salaire imposable
   csgsali: -42.44
-  crdssal: -8.84  # Avec la CSG dans la fiche de paie
+  crdssal: -8.84 # Avec la CSG dans la fiche de paie
   hsup: 0
-  # sal: 0, pas l'information
+  # sal: 0 pas l'information
 
   depense_cantine_titre_restaurant_employe: 0
 
