--- a/test/fiches_de_paie/ingenieur_ssii_2013-08.yaml
+++ b/test/fiches_de_paie/ingenieur_ssii_2013-08.yaml
@@ -13,7 +13,7 @@ input_variables:
   effectif_entreprise: 5000
   heures_non_remunerees_volume: 21.0
   # exposition_accident: 3
-  localisation_entreprise: "77023"
+  code_postal_entreprise: "77023"
   nombre_tickets_restaurant: 0
   prevoyance_obligatoire_cadre_taux_employeur: .015  # 1.5% est le minimum
   primes_salaires: 24.88
@@ -28,11 +28,10 @@ input_variables:
   taux_versement_transport: 0.015
   titre_restaurant_valeur_unitaire: 0
   titre_restaurant_volume: 0
-  type_sal:
-    "2013-08": 1  # cadre
+  type_sal: {"2013-08": 1}  # cadre
   volume_jours_ijss: 0
 output_variables:
-  # TODO à inclure dans la décomposition et à finir de coder forfait_social: -3.8  # 47.49 de base
+  # TODO à inclure dans la décomposition et à finir de coder forfait_social: -3.8 # 47.49 de base
   # TODO à coder taxe_handicapes: 18.40
 
   # salsuperbrut: 0
@@ -65,18 +64,16 @@ output_variables:
   contribution_developpement_apprentissage: -4.52
   contribution_solidarite_autonomie: -7.54
   # contribution_supplementaire_apprentissage: 0
-  fnal_tranche_a: 0
-  fnal_tranche_a_plus_20: -12.56
+  fnal: -12.56
   formation_professionnelle: -40.21
   participation_effort_construction: -11.31
-  # prevoyance_obligatoire_cadre: -192.43  # cette valeur est la part salarié TODO devrait être 37.69
+  # prevoyance_obligatoire_cadre: -192.43 # cette valeur est la part salarié TODO devrait être 37.69
   taxe_apprentissage: -12.56
   versement_transport: -37.69
 
   allegement_fillon: 0
-  credit_impot_competitivite_emploi: 2512.88 * 0.04 # pas indiqué dans la fiche
-  tehr: 0
-  salaire_de_base: 2512.88
+  credit_impot_competitivite_emploi: 2512.88 * 0.04  # pas indiqué dans la fiche
+  tehr: {'2013': 0}
   assiette_cotisations_sociales: 2512.88
 
   # cotisations_salariales: 0
