--- a/test/fiches_de_paie/salarie_ipp_2014-11.yaml
+++ b/test/fiches_de_paie/salarie_ipp_2014-11.yaml
@@ -6,7 +6,7 @@ input_variables:
   contrat_de_travail_arrivee: "2014-11-02"
   effectif_entreprise: 3000
   # exposition_accident: 3
-  localisation_entreprise: "75014"
+  code_postal_entreprise: "75014"
   prevoyance_obligatoire_cadre_taux_employeur: .0157
   ratio_alternants: 0
   redevable_taxe_apprentissage: 0
@@ -20,9 +20,7 @@ output_variables:
   conge_individuel_formation_cdd: -46
   contribution_solidarite_autonomie: -13.8
   participation_effort_construction: -20.70
-  fnal_tranche_a: 0
-  fnal_tranche_a_plus_20: -23
-  # fnal_tranche_b_plus_20 # Inclus dans fnal_tranche_a_plus_20
+  fnal: -23
   formation_professionnelle: -73.6
   versement_transport: -124.20
   # cotisations_patronales_main_d_oeuvre:
@@ -44,7 +42,7 @@ output_variables:
   accident_du_travail: -69
   famille: -241.5
   maladie_employeur: -588.80
-  # cotisations_patronales: -2836.38 + 19 * 4.5  # montant juste TODO: A compléter avec presta manquantes
+  # cotisations_patronales: - 2836.38 + 19 * 4.5  # montant juste TODO: A compléter avec presta manquantes
   taxe_salaires: -197.52 - 27.07 - 315.27
   prevoyance_obligatoire_cadre: -47.49
 
